# synapse-memory

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  WATCH_DAEMON_DIAGNOSIS.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  release-check.yml  release-publish.yml
commands/: apply-profile.md  ask.md  assistant.md  cleanup.md  config.md  cost.md  daily.md  decide.md  doctor.md  feedback.md  moc.md  onboard.md  recall.md  redact.md  resume.md  setup.md  synapse-ask.md  synapse-assistant.md  synapse-bootstrap.md  synapse-cleanup.md  synapse-config.md  synapse-cost.md  synapse-daily.md  synapse-decide.md  synapse-doctor.md  synapse-e2e.md  synapse-feedback.md  synapse-fix.md  synapse-install.md  synapse-onboard.md  synapse-recall.md  synapse-reflect.md  synapse-resume.md  synapse-review.md  synapse-setup.md  synapse-status.md  sync.md
docs/: README.md  Synapse AI Memory 동작 원리.md  architecture.md  assessment-2026-05-12.md  backlog.md  commands.md  config.md  current-issues-and-improvement-plan.md  development.md  getting-started.md  glossary.md  local-llm.md  ontology-architecture-review-2026-07-05.md  ontology-architecture-review-2026-07-07.md  ontology-learning-guide.md  plugin-feature-audit-2026-06-21.md  privacy-and-cost.md  reference.md  reingest-runbook.md  start-here.md  synapse-redesign-architecture.md  usage.md  version-history.md
docs/for-everyone/: architecture-overview.md  how-it-works.md  installer-walkthrough.md  privacy-and-cost.md  what-you-can-do.md
installer/: SynapseMemory-Installer.command
plans/: resume-skill-improvements.md  synapse-ontology-completion.md  synapse-structural-redesign.md
scripts/: bootstrap_runtime.sh  migrate_about_to_related.py  obsidian_vault_setup.py  release.sh  synapse.py  synapse_archive_normalized.py  synapse_bootstrap.py  synapse_checkpoint.py  synapse_collect_claude.py  synapse_collect_codex.py  synapse_config.py  synapse_counters.py  synapse_e2e_fixture.py  synapse_extract_candidates.py  synapse_inbox_review.py  synapse_inbox_writer.py  synapse_install_phase3.py  synapse_kpi.py  synapse_launch_wrapper.py  synapse_memory_guard.py  synapse_pipeline.py  synapse_queue.py  synapse_reflect.py
skills/apply-profile/: SKILL.md
skills/ask/: SKILL.md
skills/cleanup/: SKILL.md
skills/cost/: SKILL.md
skills/daily/: SKILL.md
skills/doctor/: SKILL.md
skills/feedback/: SKILL.md
skills/moc/: SKILL.md
skills/obsidian-vault-setup/: SKILL.md
skills/recall/: SKILL.md
skills/redact/: SKILL.md
skills/resume/: SKILL.md
skills/setup/: SKILL.md
skills/sm/: SKILL.md
skills/synapse-memory/: SKILL.md
skills/sync/: SKILL.md
tests/: conftest.py  test_ai_api_step5.py  test_aider_mirror.py  test_apfel.py  test_apple_health_mirror.py  test_apple_notes_mirror.py  test_assistant_status.py  test_browser_history_mirror.py  test_calendar_mirror.py  test_card_index.py  test_cards_auto_classify.py  test_cards_auto_generate.py  test_cards_company.py  test_cards_insight.py  test_cards_project.py  test_claude_code_mirror.py  test_cleanup.py  test_cli_ask.py  test_cli_backfill.py  test_cli_compact_raw.py  test_cli_dispatch_smoke.py  test_cli_doctor_fix.py  test_cli_help.py  test_cli_ingest.py  test_cli_lint.py  test_cli_list_pending_profiles.py  test_cli_migrate_folders.py  test_cli_plugin_surface.py  test_cli_redact_file.py  test_cli_setup_sync.py  test_cli_watch.py  test_cli_wiki.py  test_clusters_identify.py  test_codex_mirror.py  test_competency_questions.py  test_config.py  test_config_maintenance.py  test_config_models.py  test_continue_dev_mirror.py  test_cost_cap.py  (+114 more)
v2/: .gitignore  README.md
(+411 files in other folders)
