[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapse-memory"
version = "0.7.0"
description = "Personal knowledge memory & RAG layer using Apple FoundationModels"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Synapse Memory Maintainers" },
]
keywords = ["personal-knowledge", "rag", "apple-silicon", "foundationmodels", "obsidian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2",
    # torch는 sentence-transformers 의존. Apple Silicon은 MPS 자동 사용.
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "rank-bm25>=0.2",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
synapse-memory = "synapse_memory.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/synapse_memory"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_calls = false
disallow_any_generics = false
warn_return_any = false
warn_unused_ignores = false
disable_error_code = ["arg-type", "attr-defined", "var-annotated", "assignment"]
